--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -39,6 +39,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if active_page == 'quest_progress' %}active{% endif %}" href="{{ url_for('teacher_quests.quest_progress') }}">
+                            <i class="fas fa-tasks"></i> Quest Progress
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if active_page == 'shop' %}active{% endif %}" href="{{ url_for('teacher.shop') }}">
                             <i class="fas fa-store"></i> Shop Config
                         </a>
